k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: nginx-namespace
  labels:
    app: nginx
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
